--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-
   <!-- HEADER -->
   <header>
     <h1>Alex Glaubitz</h1>
@@ -31,13 +30,13 @@
   </section>
 
   <main>
-
     <!-- ABOUT ME -->
     <section class="about">
       <h2>About Me</h2>
       <p>My name is Alex Glaubitz and I code and play cello. This website is all about my portfolio. More filler text.</p>
     </section>
 
+    <!-- WORK -->
     <section class="work">
       <h2>Work</h2>
       <div><h3>Project 1 (larger)</h3></div>
@@ -48,6 +47,7 @@
     </section>
   </main>
 
+  <!-- CONTACT ME -->
   <section class="contact">
     <h2>Contact Me</h2>
     <address>
