hero section css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h1>Alex Glaubitz</h1>
+    <h1>AG</h1>
     <nav>
       <ul>
         <li><a href="#">About Me</a></li>
@@ -23,9 +23,9 @@
 
   <!-- HERO -->
   <section class="hero">
-    <p>This is the intro text to my website. Welcome!</p>
+    <h2>Hello, my name is Alex Glaubitz. I'm a Full Stack Developer living in Northern Virginia.</h2>
     <div>
-      <img src="#" alt="Alex Glaubitz">
+      <img src="./assets/images/alex-face.png" alt="Alex Glaubitz" class="hero-face">
     </div>
   </section>
 
