--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
     <!-- ABOUT ME -->
     <section class="about">
       <h2>About Me</h2>
-      <p>My name is Alex Glaubitz and I code and play cello. This website is all about my portfolio. More filler text.</p>
+      <article class="about-text">
+        <p>My name is Alex Glaubitz and I code and play cello. This website is all about my portfolio. More filler text. Words words words words words words words words words words words words words words words words words words words.</p>
+        <p>words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words words.</p>
+      </article>
+      
     </section>
 
     <!-- WORK -->
