working navbar links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>AG</h1>
     <nav>
       <ul>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact Me</a></li>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#my-work">Work</a></li>
+        <li><a href="#contact-me">Contact Me</a></li>
         <li><a href="#">Resume</a></li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
 
   <main>
     <!-- ABOUT ME -->
-    <section class="about">
+    <section class="about" id="about-me">
       <h2>About Me</h2>
       <article class="about-text">
         <p>My name is Alex Glaubitz and I code and play cello. This website is all about my portfolio. More filler text. Words words words words words words words words words words words words words words words words words words words.</p>
@@ -41,7 +41,7 @@
     </section>
 
     <!-- WORK -->
-    <section class="work">
+    <section class="work" id="my-work">
       <h2>Work</h2>
       <div><h3>Project 1 (larger)</h3></div>
       <div><h3>Project 2</h3></div>
@@ -52,7 +52,7 @@
   </main>
 
   <!-- CONTACT ME -->
-  <section class="contact">
+  <section class="contact" id="contact-me">
     <h2>Contact Me</h2>
     <address>
       <ul>
