--- a/index.html
+++ b/index.html
@@ -43,11 +43,31 @@
     <!-- WORK -->
     <section class="work" id="my-work">
       <h2>Work</h2>
-      <div><h3>Project 1 (larger)</h3></div>
-      <div><h3>Project 2</h3></div>
-      <div><h3>Project 3</h3></div>
-      <div><h3>Project 4</h3></div>
-      <div><h3>Project 5</h3></div>
+      <div class="img-lg">
+        <a href="#">
+          <img src="/assets/images/hero.jpg"><h3>Project 1 (larger)</h3></img>
+        </a>
+      </div>
+      <div class="img-sm">
+        <a href="#">
+          <img src="/assets/images/hero.jpg"><h3>Project 2</h3></img>
+        </a>
+      </div>
+      <div class="img-sm">
+        <a href="#">
+          <img src="/assets/images/hero.jpg"><h3>Project 3</h3></img>
+        </a>
+      </div>
+      <div class="img-sm">
+        <a href="#">
+          <img src="/assets/images/hero.jpg"><h3>Project 4</h3></img>
+        </a>
+      </div>
+      <div class="img-sm">
+        <a href="#">
+          <img src="/assets/images/hero.jpg"><h3>Project 5</h3></img>
+        </a>
+      </div>
     </section>
   </main>
 
