work page image arrangement improved

--- a/index.html
+++ b/index.html
@@ -43,31 +43,63 @@
     <!-- WORK -->
     <section class="work" id="my-work">
       <h2>Work</h2>
-      <div class="img-lg">
-        <a href="#">
-          <img src="/assets/images/hero.jpg"><h3>Project 1 (larger)</h3></img>
+      <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
+      <article class="work-images">
+        <a href="#" class="img-lg">
+          <div>
+            <h3>Project 1</h3>
+          </div>
         </a>
-      </div>
-      <div class="img-sm">
-        <a href="#">
-          <img src="/assets/images/hero.jpg"><h3>Project 2</h3></img>
+        <a href="#" class="img-sm-left">
+          <div>
+            <h3>Project 2</h3>
+          </div>
         </a>
-      </div>
-      <div class="img-sm">
-        <a href="#">
-          <img src="/assets/images/hero.jpg"><h3>Project 3</h3></img>
+        <a href="#" class="img-sm-right">
+          <div>
+            <h3>Project 3</h3>
+          </div>
         </a>
-      </div>
-      <div class="img-sm">
-        <a href="#">
-          <img src="/assets/images/hero.jpg"><h3>Project 4</h3></img>
+        <a href="#" class="img-sm-left">
+          <div>
+            <h3>Project 4</h3>
+          </div>
         </a>
-      </div>
-      <div class="img-sm">
-        <a href="#">
-          <img src="/assets/images/hero.jpg"><h3>Project 5</h3></img>
+        <a href="#" class="img-sm-right">
+          <div>
+            <h3>Project 5</h3>
+          </div>
         </a>
-      </div>
+      </article>
+      <!-- 
+      <article class="work-images">
+        <div class="img-lg">
+          <a href="#">
+            <img src="./assets/images/hero.jpg"><h3>Project 1 (larger)</h3></img>
+          </a>
+        </div>
+        <div class="img-sm">
+          <a href="#">
+            <img src="./assets/images/hero.jpg"><h3>Project 2</h3></img>
+          </a>
+        </div>
+        <div class="img-sm">
+          <a href="#">
+            <img src="./assets/images/hero.jpg"><h3>Project 3</h3></img>
+          </a>
+        </div>
+        <div class="img-sm">
+          <a href="#">
+            <img src="./assets/images/hero.jpg"><h3>Project 4</h3></img>
+          </a>
+        </div>
+        <div class="img-sm">
+          <a href="#">
+            <img src="./assets/images/hero.jpg"><h3>Project 5</h3></img>
+          </a>
+        </div>
+      </article>
+    -->
     </section>
   </main>
 
