about css, work image css, resume added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#my-work">Work</a></li>
         <li><a href="#contact-me">Contact Me</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="./assets/documents/GlaubitzResume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
   </header>
@@ -46,60 +46,46 @@
       <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
       <article class="work-images">
         <a href="#" class="img-lg">
-          <div>
-            <h3>Project 1</h3>
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Project 1</h3>
+              <p>CSS/HTML</p>
+            </div>
           </div>
         </a>
-        <a href="#" class="img-sm-left">
-          <div>
-            <h3>Project 2</h3>
+        <a href="#" class="img-sm margin-right">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Project 2</h3>
+              <p>CSS/HTML</p>
+            </div>
           </div>
         </a>
-        <a href="#" class="img-sm-right">
-          <div>
-            <h3>Project 3</h3>
+        <a href="#" class="img-sm">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Project 3</h3>
+              <p>CSS/HTML</p>
+            </div>
           </div>
         </a>
-        <a href="#" class="img-sm-left">
-          <div>
-            <h3>Project 4</h3>
+        <a href="#" class="img-sm margin-right">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Project 4</h3>
+              <p>CSS/HTML</p>
+            </div>
           </div>
         </a>
-        <a href="#" class="img-sm-right">
-          <div>
-            <h3>Project 5</h3>
+        <a href="#" class="img-sm">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Project 5</h3>
+              <p>CSS/HTML</p>
+            </div>
           </div>
         </a>
       </article>
-      <!-- 
-      <article class="work-images">
-        <div class="img-lg">
-          <a href="#">
-            <img src="./assets/images/hero.jpg"><h3>Project 1 (larger)</h3></img>
-          </a>
-        </div>
-        <div class="img-sm">
-          <a href="#">
-            <img src="./assets/images/hero.jpg"><h3>Project 2</h3></img>
-          </a>
-        </div>
-        <div class="img-sm">
-          <a href="#">
-            <img src="./assets/images/hero.jpg"><h3>Project 3</h3></img>
-          </a>
-        </div>
-        <div class="img-sm">
-          <a href="#">
-            <img src="./assets/images/hero.jpg"><h3>Project 4</h3></img>
-          </a>
-        </div>
-        <div class="img-sm">
-          <a href="#">
-            <img src="./assets/images/hero.jpg"><h3>Project 5</h3></img>
-          </a>
-        </div>
-      </article>
-    -->
     </section>
   </main>
 
