work links updated

--- a/index.html
+++ b/index.html
@@ -45,18 +45,34 @@
       <h2>Work</h2>
       <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
       <article class="work-images">
-        <a href="#" class="img-lg">
+        <a href="https://github.com/Qlaub/SelfDrivingKeras_NVIDIA" class="img-lg">
           <div class="work-subtitle-container">
             <div class="img-text">
-              <h3>Project 1</h3>
+              <h3>Autonomous Driving Car</h3>
+              <p>Python</p>
+            </div>
+          </div>
+        </a>
+        <a href="https://github.com/Qlaub/run-buddy" target="_blank" class="img-sm margin-right">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Run Buddy</h3>
               <p>CSS/HTML</p>
             </div>
           </div>
         </a>
-        <a href="#" class="img-sm margin-right">
+        <a href="https://github.com/Qlaub/Portfolio" class="img-sm">
           <div class="work-subtitle-container">
             <div class="img-text">
-              <h3>Project 2</h3>
+              <h3>Website Portfolio</h3>
+              <p>CSS/HTML</p>
+            </div>
+          </div>
+        </a>
+        <a href="https://github.com/Qlaub/Horiseon-Code-Refactor" class="img-sm margin-right">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Horiseon Code Refactor</h3>
               <p>CSS/HTML</p>
             </div>
           </div>
@@ -64,24 +80,8 @@
         <a href="#" class="img-sm">
           <div class="work-subtitle-container">
             <div class="img-text">
-              <h3>Project 3</h3>
-              <p>CSS/HTML</p>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="img-sm margin-right">
-          <div class="work-subtitle-container">
-            <div class="img-text">
-              <h3>Project 4</h3>
-              <p>CSS/HTML</p>
-            </div>
-          </div>
-        </a>
-        <a href="#" class="img-sm">
-          <div class="work-subtitle-container">
-            <div class="img-text">
-              <h3>Project 5</h3>
-              <p>CSS/HTML</p>
+              <h3>Project Underway</h3>
+              <p>TBD</p>
             </div>
           </div>
         </a>
