--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Alex Glaubitz - Portfolio</title>
 </head>
@@ -45,15 +46,7 @@
       <h2>Work</h2>
       <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
       <article class="work-images">
-        <a href="https://github.com/Qlaub/SelfDrivingKeras_NVIDIA" class="img-lg">
-          <div class="work-subtitle-container">
-            <div class="img-text">
-              <h3>Autonomous Driving Car</h3>
-              <p>Python</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://github.com/Qlaub/run-buddy" target="_blank" class="img-sm margin-right">
+        <a href="https://qlaub.github.io/Run-Buddy/" target="_blank" class="img-lg">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Run Buddy</h3>
@@ -61,7 +54,15 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/Qlaub/Portfolio" class="img-sm">
+        <a href="https://github.com/Qlaub/Self-Driving-NVIDIA" target="_blank" class="img-sm margin-right">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Autonomous Driving Car</h3>
+              <p>Python</p>
+            </div>
+          </div>
+        </a>
+        <a href="https://github.com/Qlaub/Portfolio" target="_blank" class="img-sm">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Website Portfolio</h3>
@@ -69,7 +70,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/Qlaub/Horiseon-Code-Refactor" class="img-sm margin-right">
+        <a href="https://github.com/Qlaub/Horiseon-Code-Refactor" target="_blank" class="img-sm margin-right">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Horiseon Code Refactor</h3>
@@ -77,9 +78,9 @@
             </div>
           </div>
         </a>
-        <a href="#" class="img-sm">
+        <a href="javascript:void(0)" class="img-sm">
           <div class="work-subtitle-container">
-            <div class="img-text">
+            <div class="img-text in-dev">
               <h3>Project Underway</h3>
               <p>TBD</p>
             </div>
