slight margin and padding changes to css, telephone link only shows in mobile, added specific background images to each project under work section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h2>Work</h2>
       <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
       <article class="work-images">
-        <a href="https://qlaub.github.io/Run-Buddy/" target="_blank" class="img-lg">
+        <a href="https://qlaub.github.io/Run-Buddy/" target="_blank" class="run-buddy img-lg">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Run Buddy</h3>
@@ -54,23 +54,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/Qlaub/Self-Driving-NVIDIA" target="_blank" class="img-sm margin-right">
-          <div class="work-subtitle-container">
-            <div class="img-text">
-              <h3>Autonomous Driving Car</h3>
-              <p>Python</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://github.com/Qlaub/Portfolio" target="_blank" class="img-sm">
-          <div class="work-subtitle-container">
-            <div class="img-text">
-              <h3>Website Portfolio</h3>
-              <p>CSS/HTML</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://github.com/Qlaub/Horiseon-Code-Refactor" target="_blank" class="img-sm margin-right">
+        <a href="https://github.com/Qlaub/Horiseon-Code-Refactor" target="_blank" class="horiseon img-sm margin-right">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Horiseon Code Refactor</h3>
@@ -78,7 +62,23 @@
             </div>
           </div>
         </a>
-        <a href="javascript:void(0)" class="img-sm">
+        <a href="https://github.com/Qlaub/Portfolio" target="_blank" class="portfolio-git img-sm">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Website Portfolio</h3>
+              <p>CSS/HTML</p>
+            </div>
+          </div>
+        </a>
+        <a href="https://github.com/Qlaub/Self-Driving-NVIDIA" target="_blank" class="neural-net img-sm margin-right">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Autonomous Driving Car</h3>
+              <p>Python</p>
+            </div>
+          </div>
+        </a>
+        <a href="javascript:void(0)" class="tbd img-sm">
           <div class="work-subtitle-container">
             <div class="img-text in-dev">
               <h3>Project Underway</h3>
@@ -95,10 +95,11 @@
     <h2>Contact Me</h2>
     <address>
       <ul>
-        <li><a href="tel:7039530137">(703) 953-0137</a></li>
-        <li><a href="mailto: e.pirazzi@gmail.com">e.pirazzi@gmail.com</a></li>
-        <li><a href="https://github.com/Qlaub">Github</a></li>
-        <li><a href="https://www.linkedin.com/in/alex-glaubitz-6b5130221/">Linkedin</a></li>
+        <li class="mobile-tel"><a href="tel:7039530137" target="_blank">(703) 953-0137</a></li>
+        <li class="desktop-tel"><a>(703) 953-0137</a></li>
+        <li><a href="mailto: e.pirazzi@gmail.com" target="_blank">e.pirazzi@gmail.com</a></li>
+        <li><a href="https://github.com/Qlaub" target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/alex-glaubitz-6b5130221/" target="_blank">Linkedin</a></li>
       </ul>
     </address>
   </section>
