updated horiseon href link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/Qlaub/Horiseon-Code-Refactor" target="_blank" class="horiseon img-sm margin-right">
+        <a href="https://qlaub.github.io/Horiseon-Code-Refactor/" target="_blank" class="horiseon img-sm margin-right">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Horiseon Code Refactor</h3>
