--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <h2>Work</h2>
       <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
       <article class="work-images">
-        <a href="https://qlaub.github.io/Run-Buddy/" target="_blank" class="run-buddy img-lg">
+        <a href="https://myersdg.github.io/rubyTarker/" target="_blank" class="run-buddy img-lg">
           <div class="work-subtitle-container">
             <div class="img-text">
-              <h3>Run Buddy</h3>
-              <p>CSS/HTML</p>
+              <h3>Color Coded</h3>
+              <p>JS/CSS/HTML</p>
             </div>
           </div>
         </a>
