updated for potluck project

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
       <h2>Work</h2>
       <!-- SHOULD THIS BE AN ARTICLE/SECTION/DIV OR OTHER ELEMENT? -->
       <article class="work-images">
-        <a href="https://myersdg.github.io/rubyTarker/" target="_blank" class="run-buddy img-lg">
+        <a href="https://github.com/Qlaub/potluck" target="_blank" class="potluck img-lg">
+          <div class="work-subtitle-container">
+            <div class="img-text">
+              <h3>Potluck</h3>
+              <p>Node.js/JS/CSS/HTML</p>
+            </div>
+          </div>
+        </a>
+        <a href="https://myersdg.github.io/rubyTarker/" target="_blank" class="run-buddy img-sm margin-right">
           <div class="work-subtitle-container">
             <div class="img-text">
               <h3>Color Coded</h3>
               <p>JS/CSS/HTML</p>
-            </div>
-          </div>
-        </a>
-        <a href="https://qlaub.github.io/Horiseon-Code-Refactor/" target="_blank" class="horiseon img-sm margin-right">
-          <div class="work-subtitle-container">
-            <div class="img-text">
-              <h3>Horiseon Code Refactor</h3>
-              <p>CSS/HTML</p>
             </div>
           </div>
         </a>
